<resources>
    <string name="app_name">Список дел.</string>
    <string name="student_form_fieldBlank">Не все поля заполнены!</string>
    <string name="student_form_must_be_in_range">Оценка должна быть в пределе от 1 до 12</string>
    <string name="activity_main_button_openRecyclerViewList">Открыть список студентов</string>
    <string name="activity_registration_button_goBack">Вернуться обратно</string>
    <string name="fragment_students_button_sortByRandom">Фильтрация cлучайно</string>
    <string name="fragment_students_button_sortByGrade">Фильтрация по оценке</string>
    <string name="fragment_students_button_sortByName">Фильтрация по имени</string>
    <string name="fragment_students_editText_searchPlaceholder">Поиск</string>
    <string name="student_list_item_button_moreAboutStudent">Подробнее</string>
    <string name="student_form_editText_inputName">Имя</string>
    <string name="student_form_editText_inputLastName">Фамилия</string>
    <string name="student_form_editText_inputDescription">Описание</string>
    <string name="student_form_editText_inputGroup">Группа</string>
    <string name="student_form_editText_inputMark">Оценка</string>
    <string name="student_form_button_confirmAddNewStudent">Подтвердить</string>
    <string name="student_form_button_addStudentPhoto">Добавить фото студента</string>
    <string name="activity_main_button_openLeetCode">Открыть задачи Leetcode</string>
    <string name="leetcode_file_editText_checkPalindrome">Проверить</string>
    <string name="speech_recognizer_button_action">ACTION</string>
    <string name="activity_main_button_programs">Открыть программы\n(камера, sms, распознавание речи)</string>
    <string name="programs_button_speechRecognizer">Открыть Speech Recognizer</string>
    <string name="programs_button_openCamera">Открыть камеру</string>
    <string name="programs_button_openSMS">Открыть SMS</string>
    <string name="social_network_button_sendToWhatsapp">Отправить на Whatsapp</string>
    <string name="social_network_editText_setMessage">Введите сообщение Whatsapp</string>
    <string name="fragment_subjects_button_updateList">Обновить детали</string>
    <string name="subject_list_item_button_moreAboutSubject">Подробнее о группе</string>
    <string name="activity_main_button_goToNoteList">Открыть список дел</string>
    <string name="fragment_notes_button_getBack">Назад</string>
    <string name="fragment_students_button_getBack">Назад</string>
    <string name="note_form_editText_inputTitle">Заголовок</string>
    <string name="note_form_editText_inputExpirationDate">Дата выполнения</string>
    <string name="note_form_editText_inputDescription">Описание</string>
    <string name="note_form_button_confirmAddNewNote">Подтвердить</string>
    <string name="note_form_button_datePicker">Выбрать дату</string>
    <string name="note_form_textView_showErrorMessage">Не все поля заполнены!</string>
    <string name="note_form_button_addNotePhoto">Добавить фото</string>
    <string name="student_list_item_button_changeView">Изменить представление</string>

</resources>