<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView_note_form_showNotePhoto"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        android:src="@drawable/magnifier"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_note_form_addNotePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_form_button_addNotePhoto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_note_form_showNotePhoto"
        />

    <EditText
        android:id="@+id/editText_note_form_inputTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="text"
        android:hint="@string/note_form_editText_inputTitle"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button_note_form_addNotePhoto"/>

    <EditText
        android:id="@+id/editText_note_form_inputExpirationDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:focusable="false"
        android:hint="@string/note_form_editText_inputExpirationDate"
        android:layout_margin="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_note_form_inputTitle" />

    <Button
        android:id="@+id/button_note_form_datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_form_button_datePicker"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_note_form_inputExpirationDate"
        />

    <EditText
        android:id="@+id/editText_note_form_inputDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:inputType="text"
        android:hint="@string/note_form_editText_inputDescription"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_note_form_datePicker" />

    <TextView
        android:id="@+id/textView_note_form_showErrorMessage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editText_note_form_inputDescription"/>

    <Button
        android:id="@+id/button_note_form_confirmAddNewNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/note_form_button_confirmAddNewNote"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_note_form_showErrorMessage" />


</androidx.constraintlayout.widget.ConstraintLayout>